[gd_scene load_steps=99 format=2]

[ext_resource path="res://Scripts/Player_Script.gd" type="Script" id=1]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Head/MEA_Skeleton64_Head_BackWalk1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Head/MEA_Skeleton64_Head_WalkRight1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Head/MEA_Skeleton64_Head_WalkRight2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Head/MEA_Skeleton64_Head_WalkRight3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Head/MEA_Skeleton64_Head_WalkRight4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Head/MEA_Skeleton64_Head_WalkLeft1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Head/MEA_Skeleton64_Head_WalkLeft2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Head/MEA_Skeleton64_Head_WalkLeft3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Head/MEA_Skeleton64_Head_WalkLeft4.png" type="Texture" id=10]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonLeftFight/HEad/MEA_Skeleton_Head_LeftFight.png" type="Texture" id=11]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonRightFight/Head/MEA_Skeleton_Head_RightFight.png" type="Texture" id=12]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonFrontFight/Head/MEA_Skeleton64_Head_Fight1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Head/MEA_Skeleton64_Head_WalkFront1_2.png" type="Texture" id=14]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonBackFight/Head/MEA_Skeleton_Head_BackFight.png" type="Texture" id=15]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Head/MEA_Skeleton64_Head_BackWalk2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Head/MEA_Skeleton64_Head_BackWalk3.png" type="Texture" id=17]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Head/MEA_Skeleton64_Head_BackWalk4.png" type="Texture" id=18]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Head/MEA_Skeleton64_Head_WalkFront1_3.png" type="Texture" id=19]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Head/MEA_Skeleton64_Head_WalkFront1_4.png" type="Texture" id=20]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Head/MEA_Skeleton64_Head_WalkFront1_5.png" type="Texture" id=21]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk_/Hands/EA_Skeleton_Hands_BackWalk1.png" type="Texture" id=22]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Hands/MEA_Skeleton64_Hands_BackWalk1.png" type="Texture" id=23]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Hands/MEA_Skeleton64_Hands_BackWalk2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Hands/MEA_Skeleton64_Hands_BackWalk3.png" type="Texture" id=25]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Hands/MEA_Skeleton64_Hands_BackWalk4.png" type="Texture" id=26]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Hands/MEA_Skeleton64_Hands_WalkRight1.png" type="Texture" id=27]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Hands/MEA_Skeleton64_Hands_WalkRight2.png" type="Texture" id=28]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Hands/MEA_Skeleton64_Hands_WalkRight3.png" type="Texture" id=29]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Hands/MEA_Skeleton64_Hands_WalkRight4.png" type="Texture" id=30]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Hands/MEA_Skeleton64_Hands_WalkLeft1.png" type="Texture" id=31]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Hands/MEA_Skeleton64_Hands_WalkLeft2.png" type="Texture" id=32]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Hands/MEA_Skeleton64_Hands_WalkLeft3.png" type="Texture" id=33]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Hands/MEA_Skeleton64_Hands_WalkLeft4.png" type="Texture" id=34]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonLeftFight/Hands/MEA_Skeleton_Hands_LeftFight.png" type="Texture" id=35]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonRightFight/Hands/MEA_Skeleton_Hands_RightFight.png" type="Texture" id=36]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonFrontFight/Hands/MEA_Skeleton64_Hands_Fight1.png" type="Texture" id=37]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk_/Hands/MEA_Skeleton64_Hands_Walk1.png" type="Texture" id=38]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk_/Hands/EA_Skeleton_Hands_BackWalk2.png" type="Texture" id=39]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk_/Hands/EA_Skeleton_Hands_BackWalk3.png" type="Texture" id=40]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk_/Hands/EA_Skeleton_Hands_BackWalk4.png" type="Texture" id=41]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk_/Hands/MEA_Skeleton64_Hands_Walk2.png" type="Texture" id=42]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk_/Hands/MEA_Skeleton64_Hands_Walk3.png" type="Texture" id=43]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Hands/MEA_Skeleton64_Hands_WalkFront1.png" type="Texture" id=44]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Hands/MEA_Skeleton64_Hands_WalkFront2.png" type="Texture" id=45]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Hands/MEA_Skeleton64_Hands_WalkFront3.png" type="Texture" id=46]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Hands/MEA_Skeleton64_Hands_WalkFront4.png" type="Texture" id=47]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk_/Torso/EA_Skeleton_Torso_BackWalk1.png" type="Texture" id=48]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Torso/MEA_Skeleton64_Torso_BackWalk1.png" type="Texture" id=49]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Torso/MEA_Skeleton64_Torso_BackWalk2.png" type="Texture" id=50]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Torso/MEA_Skeleton64_Torso_BackWalk3.png" type="Texture" id=51]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Torso/MEA_Skeleton64_Torso_BackWalk4.png" type="Texture" id=52]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Torso/MEA_Skeleton64_Torso_WalkRight1.png" type="Texture" id=53]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Torso/MEA_Skeleton64_Torso_WalkRight2.png" type="Texture" id=54]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Torso/MEA_Skeleton64_Torso_WalkRight3.png" type="Texture" id=55]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Torso/MEA_Skeleton64_Torso_WalkRight4.png" type="Texture" id=56]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Torso/MEA_Skeleton64_Torso_WalkLeft1.png" type="Texture" id=57]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Torso/MEA_Skeleton64_Torso_WalkLeft2.png" type="Texture" id=58]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Torso/MEA_Skeleton64_Torso_WalkLeft3.png" type="Texture" id=59]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Torso/MEA_Skeleton64_Torso_WalkLeft4.png" type="Texture" id=60]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonLeftFight/Torso/MEA_Skeleton_Torso_LeftFight.png" type="Texture" id=61]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonRightFight/Torso/MEA_Skeleton_Torso_RightFight.png" type="Texture" id=62]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonFrontFight/Torso/MEA_Skeleton64_Torso_Fight1.png" type="Texture" id=63]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk_/Torso/MEA_Skeleton64_Torso_Walk1.png" type="Texture" id=64]
[ext_resource path="res://Assets/Characters/Skeleton/MEA_SkeletonBackFight/Torso/MEA_Skeleton_Torso_BackFight.png" type="Texture" id=65]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk_/Torso/EA_Skeleton_Torso_BackWalk2.png" type="Texture" id=66]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk_/Torso/EA_Skeleton_Torso_BackWalk3.png" type="Texture" id=67]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk_/Torso/EA_Skeleton_Torso_BackWalk4.png" type="Texture" id=68]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk_/Torso/MEA_Skeleton64_Torso_Walk2.png" type="Texture" id=69]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk_/Torso/MEA_Skeleton64_Torso_Walk3.png" type="Texture" id=70]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Torso/MEA_Skeleton64_Torso_WalkFront1.png" type="Texture" id=71]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Torso/MEA_Skeleton64_Torso_WalkFront2.png" type="Texture" id=72]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Torso/MEA_Skeleton64_Torso_WalkFront3.png" type="Texture" id=73]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Torso/MEA_Skeleton64_Torso_WalkFront4.png" type="Texture" id=74]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Legs/MEA_Skeleton64_Legs_BackWalk1.png" type="Texture" id=75]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Legs/MEA_Skeleton64_Legs_WalkRight1.png" type="Texture" id=76]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Legs/MEA_Skeleton64_Legs_WalkRight2.png" type="Texture" id=77]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Legs/MEA_Skeleton64_Legs_WalkRight3.png" type="Texture" id=78]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Legs/MEA_Skeleton64_Legs_WalkRight4.png" type="Texture" id=79]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Legs/MEA_Skeleton64_Legs_WalkLeft1.png" type="Texture" id=80]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Legs/MEA_Skeleton64_Legs_WalkLeft2.png" type="Texture" id=81]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Legs/MEA_Skeleton64_Legs_WalkLeft3.png" type="Texture" id=82]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonLeftWalk/Legs/MEA_Skeleton64_Legs_WalkLeft4.png" type="Texture" id=83]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Legs/MEA_Skeleton64_Legs_WalkFront1.png" type="Texture" id=84]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Legs/MEA_Skeleton64_Legs_BackWalk2.png" type="Texture" id=85]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Legs/MEA_Skeleton64_Legs_BackWalk3.png" type="Texture" id=86]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonBackWalk/Legs/MEA_Skeleton64_Legs_BackWalk4.png" type="Texture" id=87]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Legs/MEA_Skeleton64_Legs_WalkFront2.png" type="Texture" id=88]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Legs/MEA_Skeleton64_Legs_WalkFront3.png" type="Texture" id=89]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/Legs/MEA_Skeleton64_Legs_WalkFront4.png" type="Texture" id=90]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonFrontWalk/EA_Skeleton64_WalkColor1.png" type="Texture" id=91]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle_Up",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Walk_Right",
"speed": 12.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Walk_Left",
"speed": 12.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Fight_Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Fight_Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Idle_Left",
"speed": 0.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "Fight_Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Idle_Down",
"speed": 0.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Fight_Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle_Right",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Walk_Up",
"speed": 12.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "Walk_Down",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "Idle_Up",
"speed": 0.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "Walk_Up_Weapon",
"speed": 6.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "Walk_Right",
"speed": 12.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "Walk_Left",
"speed": 12.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "Fight_Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "Fight_Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "Idle_Left",
"speed": 0.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "Fight_Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "Idle_Down",
"speed": 0.0
}, {
"frames": [  ],
"loop": true,
"name": "Fight_Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "Idle_Right",
"speed": 0.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "Walk_Up",
"speed": 6.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 42 ), ExtResource( 38 ), ExtResource( 43 ) ],
"loop": true,
"name": "Walk_Down",
"speed": 6.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "Idle_Down_Weapon",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ) ],
"loop": true,
"name": "Walk_Down_Weapon",
"speed": 6.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "Idle_Up_Weapon",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": false,
"name": "Idle_Up",
"speed": 0.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": true,
"name": "Walk_Up_Weapon",
"speed": 6.0
}, {
"frames": [ ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ) ],
"loop": true,
"name": "Walk_Right",
"speed": 12.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ) ],
"loop": true,
"name": "Walk_Left",
"speed": 12.0
}, {
"frames": [ ExtResource( 61 ) ],
"loop": true,
"name": "Fight_Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 62 ) ],
"loop": true,
"name": "Fight_Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 57 ) ],
"loop": false,
"name": "Idle_Left",
"speed": 0.0
}, {
"frames": [ ExtResource( 63 ) ],
"loop": false,
"name": "Fight_Down",
"speed": 0.0
}, {
"frames": [ ExtResource( 64 ) ],
"loop": false,
"name": "Idle_Down",
"speed": 0.0
}, {
"frames": [ ExtResource( 65 ) ],
"loop": true,
"name": "Fight_Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ) ],
"loop": false,
"name": "Idle_Right",
"speed": 0.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ) ],
"loop": true,
"name": "Walk_Up",
"speed": 6.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 69 ), ExtResource( 64 ), ExtResource( 70 ) ],
"loop": true,
"name": "Walk_Down",
"speed": 12.0
}, {
"frames": [ ExtResource( 71 ) ],
"loop": false,
"name": "Idle_Down_Weapon",
"speed": 0.0
}, {
"frames": [ ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ) ],
"loop": true,
"name": "Walk_Down_Weapon",
"speed": 6.0
}, {
"frames": [ ExtResource( 49 ) ],
"loop": false,
"name": "Idle_Up_Weapon",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 75 ) ],
"loop": true,
"name": "Idle_Up",
"speed": 0.0
}, {
"frames": [ ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ) ],
"loop": true,
"name": "Walk_Right",
"speed": 12.0
}, {
"frames": [ ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ) ],
"loop": true,
"name": "Walk_Left",
"speed": 6.0
}, {
"frames": [ ExtResource( 80 ) ],
"loop": true,
"name": "Idle_Left",
"speed": 0.0
}, {
"frames": [ ExtResource( 84 ) ],
"loop": true,
"name": "Idle_Down",
"speed": 0.0
}, {
"frames": [ ExtResource( 76 ) ],
"loop": true,
"name": "Idle_Right",
"speed": 0.0
}, {
"frames": [ ExtResource( 75 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ) ],
"loop": true,
"name": "Walk_Up",
"speed": 12.0
}, {
"frames": [ ExtResource( 84 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ) ],
"loop": true,
"name": "Walk_Down",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Player_BaseNode" type="KinematicBody2D" groups=[
"Save",
]]

input_pickable = false
collision_layer = 5
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Player_Character" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 13
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Player_Character" index="0"]

position = Vector2( -0.225213, 0.413943 )
scale = Vector2( 2.55412, -3.16224 )
shape = SubResource( 1 )

[node name="Character" type="AnimatedSprite" parent="Player_Character" index="1"]

frames = SubResource( 2 )
animation = "default"

[node name="Head" type="AnimatedSprite" parent="Player_Character/Character" index="0"]

z_index = 2
frames = SubResource( 3 )
animation = "Idle_Down"
_sections_unfolded = [ "Z Index" ]

[node name="Hands" type="AnimatedSprite" parent="Player_Character/Character" index="1"]

z_index = 3
frames = SubResource( 4 )
animation = "Idle_Down"
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="Torso" type="AnimatedSprite" parent="Player_Character/Character" index="2"]

frames = SubResource( 5 )
animation = "Idle_Down"
_sections_unfolded = [ "Z Index" ]

[node name="Legs" type="AnimatedSprite" parent="Player_Character/Character" index="3"]

position = Vector2( -0.188934, 0.0944691 )
frames = SubResource( 6 )
animation = "Idle_Down"
_sections_unfolded = [ "Z Index" ]

[node name="Down_HitPos" type="Position2D" parent="Player_Character" index="2"]

position = Vector2( -8.94755, 20.2018 )

[node name="Down_WeaponPos" type="Position2D" parent="Player_Character" index="3"]

visible = false
position = Vector2( -26.4498, 11.0264 )
_sections_unfolded = [ "Transform" ]

[node name="Up_HitPos" type="Position2D" parent="Player_Character" index="4"]

position = Vector2( 11.0007, -0.99472 )

[node name="Up_WeaponPos" type="Position2D" parent="Player_Character" index="5"]

visible = false
position = Vector2( 26.0944, 9.31764 )
_sections_unfolded = [ "Transform" ]

[node name="Right_HitPos" type="Position2D" parent="Player_Character" index="6"]

visible = false
position = Vector2( 15.3459, 9.44229 )

[node name="Right_WeaponPos" type="Position2D" parent="Player_Character" index="7"]

visible = false
position = Vector2( 4.16537, 15.8679 )
_sections_unfolded = [ "Transform" ]

[node name="Left_HitPos" type="Position2D" parent="Player_Character" index="8"]

visible = false
position = Vector2( -14.5062, 9.97023 )
_sections_unfolded = [ "Transform" ]

[node name="Left_WeaponPos" type="Position2D" parent="Player_Character" index="9"]

visible = false
position = Vector2( -3.96816, 16.0103 )
_sections_unfolded = [ "Transform" ]

[node name="Head_ArmorPos" type="Position2D" parent="Player_Character" index="10"]

position = Vector2( 0, -31.3272 )

[node name="Chest_ArmorPos" type="Position2D" parent="Player_Character" index="11"]

position = Vector2( 0.569588, 16.0908 )

[node name="Player_Camera" type="Camera2D" parent="." index="1"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Smoothing" ]

[node name="Inventory_Sprite" type="Sprite" parent="." index="2"]

visible = false
texture = ExtResource( 91 )

[node name="PlayerCollision" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -0.569478, 0.767054 )
scale = Vector2( 2.61017, 3.14016 )
shape = SubResource( 7 )


